--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
-/obs/data/Cache
+phantomjs*
+**/data/Backups
+**/data/Cache
+**/data/CachedData
+**/data/GPUCache
+**/data/Local Storage
+**/data/Cookies
+**/data/Cookies-Journal
+**/data/machineid
+**/data/Preferences
+**/data/storage.json
+**/data/*.sock
+**/data/User/workspaceStorage
