update w/prettier settings

--- a/obs/data/User/settings.json
+++ b/obs/data/User/settings.json
@@ -16,4 +16,14 @@
   "workbench.settings.editor": "json",
   "git.enableSmartCommit": true,
   "workbench.iconTheme": "material-icon-theme",
+  "prettier.arrowParens": "avoid",
+  "prettier.bracketSpacing": true,
+  "prettier.eslintIntegration": true,
+  "prettier.printWidth": 70,
+  "prettier.singleQuote": true,
+  "prettier.semi": false,
+  "prettier.tabWidth": 2,
+  "prettier.useTabs": false,
+  "prettier.trailingComma": "none",
+  "prettier.proseWrap": "always",
 }
