--- a/obs/data/User/settings.json
+++ b/obs/data/User/settings.json
@@ -26,5 +26,6 @@
   "prettier.useTabs": false,
   "prettier.trailingComma": "none",
   "prettier.proseWrap": "always",
-  "git.autofetch": true
+  "git.autofetch": true,
+  "git.confirmSync": false
 }
