--- a/obs/data/User/settings.json
+++ b/obs/data/User/settings.json
@@ -1,10 +1,9 @@
 {
-  "editor.fontFamily": "Dank Mono, Operator Mono",
+  "editor.fontFamily": "'Victor Mono','Dank Mono', Operator Mono",
   "editor.tabSize": 2,
   "editor.fontSize": 20,
   "editor.fontLigatures": true,
   "editor.formatOnSave": true,
-  "workbench.colorTheme": "Night Owl",
   "javascript.validate.enable": false,
   "window.zoomLevel": 1,
   "editor.cursorBlinking": "solid",
@@ -29,5 +28,6 @@
   "git.confirmSync": false,
   "editor.codeActionsOnSave": {
     "source.organizeImports": true
-  }
+  },
+  "workbench.colorTheme": "Night Owl"
 }
